--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   feather_icons: ^1.2.0
   flutter_easyloading: ^3.0.5
   fluttertoast: ^8.0.9
+  cupertino_stepper: ^0.2.1
 
 dev_dependencies:
   flutter_test:
