--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,9 @@ dependencies:
   flutter_easyloading: ^3.0.5
   fluttertoast: ^8.0.9
   cupertino_stepper: ^0.2.1
+  flutter_map: ^3.0.0
+  latlong2: ^0.8.1
+  flutter_mapbox_navigation: ^0.0.26
 
 dev_dependencies:
   flutter_test:
