--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,7 +44,11 @@ dependencies:
   flutter_map: ^3.0.0
   latlong2: ^0.8.1
   url_launcher: ^6.1.6
-
+  geolocator: ^9.0.2
+  geocoding: ^2.0.5
+  shared_preferences: ^2.0.15
+  provider: ^6.0.4
+  im_animations: ^0.1.2
 dev_dependencies:
   flutter_test:
     sdk: flutter
