--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,9 @@ dependencies:
   provider: ^6.0.4
   im_animations: ^0.1.2
   firebase_core: ^2.3.0
+  firebase_auth: ^4.1.3
+  pin_code_fields: ^7.4.0
+  country_pickers: ^2.0.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
