Date Picker added

--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -34,16 +34,23 @@
 	<string>This app needs access to location when open.</string>
 	<key>UIApplicationSupportsIndirectInputEvents</key>
 	<true/>
+	<key>CFBundleURLTypes</key>
+	<array>
+		<string>om.googleusercontent.apps.1005902038759-2nru32c9og51efj5fbpoaihredcn9gc1</string>
+		<array>
+			<string>com.googleusercontent.apps.1005902038759-2nru32c9og51efj5fbpoaihredcn9gc1</string>
+		</array>
+	</array>
 	<key>UIBackgroundModes</key>
 	<array>
 		<string>audio</string>
 		<string>location</string>
 	</array>
-    <key>LSApplicationQueriesSchemes</key>
-    <array>
-        <string>googlechromes</string>
-        <string>comgooglemaps</string>
-    </array>
+	<key>LSApplicationQueriesSchemes</key>
+	<array>
+		<string>googlechromes</string>
+		<string>comgooglemaps</string>
+	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
