--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,13 +46,14 @@ dependencies:
   url_launcher: ^6.1.6
   geolocator: ^9.0.2
   geocoding: ^2.0.5
-  shared_preferences: ^2.0.15
   provider: ^6.0.4
   im_animations: ^0.1.2
+  location_picker_flutter_map: ^1.1.5
   firebase_core: ^2.3.0
   firebase_auth: ^4.1.3
   pin_code_fields: ^7.4.0
   country_pickers: ^2.0.0
+  shared_preferences: ^2.0.15
 dev_dependencies:
   flutter_test:
     sdk: flutter
